--- a/pom.xml
+++ b/pom.xml
@@ -36,14 +36,14 @@
 	<properties>
 		<gravitee-common.version>0.5.0</gravitee-common.version>
 		<gravitee-definition.version>0.8.0</gravitee-definition.version>
-		<gravitee-plugin-core.version>0.7.0</gravitee-plugin-core.version>
-		<gravitee-plugin-policy.version>0.7.0</gravitee-plugin-policy.version>
+		<gravitee-plugin-core.version>0.8.0-SNAPSHOT</gravitee-plugin-core.version>
+		<gravitee-plugin-policy.version>0.8.0-SNAPSHOT</gravitee-plugin-policy.version>
 		<gravitee-repository.version>0.9.0-SNAPSHOT</gravitee-repository.version>
 		<gravitee-repository-elasticsearch.version>0.6.0</gravitee-repository-elasticsearch.version>
 		<gravitee-repository-mongodb.version>0.9.0-SNAPSHOT</gravitee-repository-mongodb.version>
 		<gravitee-repository-couchbase.version>0.1.0-SNAPSHOT</gravitee-repository-couchbase.version>
 		<gravitee-repository-jdbc.version>0.3.0</gravitee-repository-jdbc.version>
-		<gravitee-gateway-api.version>0.8.0</gravitee-gateway-api.version>
+		<gravitee-gateway-api.version>0.9.0-SNAPSHOT</gravitee-gateway-api.version>
 
 		<apacheds-server-jndi.version>1.5.5</apacheds-server-jndi.version>
 		<jackson.version>2.5.3</jackson.version>
