--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
     "angular": "~1.4.9",
     "angular-drag-and-drop-lists": "~1.3.0",
     "angular-markdown-directive": "~0.3.1",
-    "angular-swagger-ui": "~0.2.7",
+    "angular-swagger-ui": "^0.3.1",
     "angular-cookies": "~1.4.9",
     "jquery": "~2.2.0",
     "bootstrap-sass": "3.3.6",
@@ -29,7 +29,8 @@
     "angular-timeline": "~1.6.2",
     "jsdiff": "~2.2.1",
     "angular-utf8-base64": "~0.0.5",
-    "ng-file-upload": "^12.0.4"
+    "ng-file-upload": "^12.0.4",
+    "js-yaml": "^3.5.5"
   },
   "resolutions": {
     "angular": "~1.4.9",
@@ -46,6 +47,13 @@
     "angular-material-icons": {
       "main": [
         "./angular-material-icons.js"
+      ]
+    },
+    "angular-swagger-ui": {
+      "main": [
+        "./dist/scripts/swagger-ui.js",
+        "./dist/css/swagger-ui.min.css",
+        "./dist/scripts/modules/swagger-yaml-parser.min.js"
       ]
     }
   }
