--- a/gravitee-gateway-core/pom.xml
+++ b/gravitee-gateway-core/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee.gateway</groupId>
         <artifactId>gravitee-gateway</artifactId>
-        <version>0.9.0</version>
+        <version>0.10.0-SNAPSHOT</version>
     </parent>
 
 
