--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,13 @@
     </dependencies>
 
     <build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+		
         <plugins>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
