feat(cache): Add cache management from the repository plugin

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -92,6 +92,9 @@ ratelimit:
   mongodb:
     uri: mongodb://${ds.mongodb.host}/${ds.mongodb.dbname}
 
+cache:
+  type: ehcache
+
 # Reporters configuration (used to store reporting monitoring data, request metrics, healthchecks and others...
 # All reporters are enabled by default. To stop one of them, you have to add the property 'enabled: false'
 reporters:
