--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -100,8 +100,14 @@ cache:
 reporters:
   # Elasticsearch reporter
   elastic:
-    host: ${ds.elastic.host}
-    port: ${ds.elastic.port}
+    hosts:
+      - ${ds.elastic.host}:${ds.elastic.port}
+#    index: gravitee
+#    bulk:
+#      actions: 1000           # Number of requests action before flush
+#      flush_interval: 5       # Flush interval in seconds
+#      concurrent_requests: 5  # Concurrent requests
+
     # Reporters are async by nature so the gateway is keeping an internal in-memory structure to stack data before
     # pushing them into a final storage (Elasticsearch in this example)
     queue:
