--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
 	<properties>
 		<gravitee-common.version>0.6.0</gravitee-common.version>
-		<gravitee-definition.version>0.8.0</gravitee-definition.version>
+		<gravitee-definition.version>0.9.0-SNAPSHOT</gravitee-definition.version>
 		<gravitee-plugin-core.version>0.8.0</gravitee-plugin-core.version>
 		<gravitee-plugin-policy.version>0.8.0</gravitee-plugin-policy.version>
 		<gravitee-repository.version>0.10.0-SNAPSHOT</gravitee-repository.version>
