--- a/gravitee-gateway-services/gravitee-gateway-services-core/pom.xml
+++ b/gravitee-gateway-services/gravitee-gateway-services-core/pom.xml
@@ -22,8 +22,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.gravitee.gateway</groupId>
-        <artifactId>gravitee-gateway</artifactId>
+        <groupId>io.gravitee.gateway.services</groupId>
+        <artifactId>gravitee-gateway-services</artifactId>
         <version>0.10.0-SNAPSHOT</version>
     </parent>
 
