chore: Fix groupId for services-core module

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-container/pom.xml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-container/pom.xml
@@ -72,7 +72,7 @@
         </dependency>
 
         <dependency>
-            <groupId>io.gravitee.gateway</groupId>
+            <groupId>io.gravitee.gateway.services</groupId>
             <artifactId>gravitee-gateway-services-core</artifactId>
             <version>${project.version}</version>
         </dependency>
