--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
     <groupId>io.gravitee.gateway</groupId>
     <artifactId>gravitee-gateway</artifactId>
-    <version>0.10.0-SNAPSHOT</version>
+    <version>0.10.0</version>
     <packaging>pom</packaging>
     <name>Gravitee IO - Gateway</name>
 
@@ -140,11 +140,11 @@
     </dependencies>
 
     <properties>
-        <gravitee-definition.version>0.9.0-SNAPSHOT</gravitee-definition.version>
+        <gravitee-definition.version>0.9.0</gravitee-definition.version>
         <gravitee-common.version>0.6.0</gravitee-common.version>
-        <gravitee-repository.version>0.10.0-SNAPSHOT</gravitee-repository.version>
-        <gravitee-plugin-core.version>0.9.0-SNAPSHOT</gravitee-plugin-core.version>
-        <gravitee-plugin-policy.version>0.9.0-SNAPSHOT</gravitee-plugin-policy.version>
+        <gravitee-repository.version>0.10.0</gravitee-repository.version>
+        <gravitee-plugin-core.version>0.9.0</gravitee-plugin-core.version>
+        <gravitee-plugin-policy.version>0.9.0</gravitee-plugin-policy.version>
         <gravitee-policy-api.version>0.6.0</gravitee-policy-api.version>
         <gravitee-gateway-api.version>0.9.0</gravitee-gateway-api.version>
         <gravitee-reporter-api.version>0.6.0</gravitee-reporter-api.version>
