--- a/gravitee-gateway-standalone/pom.xml
+++ b/gravitee-gateway-standalone/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee.gateway</groupId>
         <artifactId>gravitee-gateway</artifactId>
-        <version>0.10.0</version>
+        <version>0.11.0-SNAPSHOT</version>
     </parent>
 
     <groupId>io.gravitee.gateway.standalone</groupId>
