--- a/gravitee-management-api-providers/pom.xml
+++ b/gravitee-management-api-providers/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee.management</groupId>
         <artifactId>gravitee-management-api</artifactId>
-        <version>0.10.0</version>
+        <version>0.11.0-SNAPSHOT</version>
     </parent>
 
     <groupId>io.gravitee.management.providers</groupId>
