fix(security): Use declared security provider order when validating credentials
Closes #66

--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -99,11 +99,11 @@ security:
       users:
         - user:
           username: user
-          password: password
+          password: $2a$10$9kjw/SH9gucCId3Lnt6EmuFreUAcXSZgpvAYuW2ISv7hSOhHRH1AO
           roles: USER # you can declare multiple roles with comma separator (USER, OWNER, ADMIN ...)
         - user:
           username: admin
-          password: admin
+          password: $2a$10$Ihk05VSds5rUSgMdsMVi9OKMIx2yUvMz7y9VP3rJmQeizZLrhLMyq
           roles: ADMIN
     - type: gravitee
       password-encoding: true
