--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
     "angular-material-icons": "~0.6.0",
     "Read-More-Directive": "git@github.com:andoulla/Read-More-Directive.git",
     "moment": "momentjs#~2.11.1",
-    "dragular": "~3.4.0",
+    "dragular": "^4.1.0",
     "angular-schema-form": "~0.8.12",
     "ngclipboard": "~1.1.0",
     "angular-ui-validate": "~1.2.2",
