--- a/gravitee-management-api-service/pom.xml
+++ b/gravitee-management-api-service/pom.xml
@@ -75,6 +75,11 @@
 			<artifactId>spring-tx</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.4</version>
+		</dependency>
 
 		<!-- HTML Parser -->
 		<dependency>
