--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -99,18 +99,28 @@ security:
       users:
         - user:
           username: user
+          # Passwords are encoded using BCrypt
+          # Password value: password
           password: $2a$10$9kjw/SH9gucCId3Lnt6EmuFreUAcXSZgpvAYuW2ISv7hSOhHRH1AO
-          roles: USER # you can declare multiple roles with comma separator (USER, ADMIN, API_PUBLISHER, API_CONSUMER ...)
+          # You can declare multiple roles with comma separator:
+          #  USER: Can access portal and be a member of an API
+          #  API_PUBLISHER: Can create and manage APIs
+          #  API_CONSUMER: Can create and manage Applications
+          #  ADMIN: Can manage global system
+          roles: USER
         - user:
           username: admin
+          # Password value: admin
           password: $2a$10$Ihk05VSds5rUSgMdsMVi9OKMIx2yUvMz7y9VP3rJmQeizZLrhLMyq
           roles: ADMIN
         - user:
           username: api1
+          # Password value: api1
           password: $2a$10$iXdXO4wAYdhx2LOwijsp7.PsoAZQ05zEdHxbriIYCbtyo.y32LTji
           roles: API_PUBLISHER, API_CONSUMER
         - user:
           username: application1
+          # Password value: application1
           password: $2a$10$2gtKPYRB9zaVaPcn5RBx/.3T.7SeZoDGs9GKqbo9G64fKyXFR1He.
           roles: API_CONSUMER
     - type: gravitee
