--- a/gravitee-management-api-rest/pom.xml
+++ b/gravitee-management-api-rest/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>io.gravitee.management</groupId>
 		<artifactId>gravitee-management-api</artifactId>
-		<version>0.11.0</version>
+		<version>0.12.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>gravitee-management-api-rest</artifactId>
