--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -92,6 +92,12 @@ analytics:
     host: ${ds.elastic.host}
     port: ${ds.elastic.port}
 
+# Authentication and identity sources
+# Users can have following roles (authorities):
+#  USER: Can access portal and be a member of an API
+#  API_PUBLISHER: Can create and manage APIs
+#  API_CONSUMER: Can create and manage Applications
+#  ADMIN: Can manage global system
 security:
   type: basic # authentication type (default to 'basic', possible values : 'basic', 'oauth2')
   providers:  # authentication providers
@@ -102,11 +108,6 @@ security:
           # Passwords are encoded using BCrypt
           # Password value: password
           password: $2a$10$9kjw/SH9gucCId3Lnt6EmuFreUAcXSZgpvAYuW2ISv7hSOhHRH1AO
-          # You can declare multiple roles with comma separator:
-          #  USER: Can access portal and be a member of an API
-          #  API_PUBLISHER: Can create and manage APIs
-          #  API_CONSUMER: Can create and manage Applications
-          #  ADMIN: Can manage global system
           roles: USER
         - user:
           username: admin
@@ -117,6 +118,7 @@ security:
           username: api1
           # Password value: api1
           password: $2a$10$iXdXO4wAYdhx2LOwijsp7.PsoAZQ05zEdHxbriIYCbtyo.y32LTji
+          # You can declare multiple roles using comma separator
           roles: API_PUBLISHER, API_CONSUMER
         - user:
           username: application1
@@ -126,21 +128,32 @@ security:
     - type: gravitee
       password-encoding: true
 #    - type: ldap
-#      embedded: true                        # embedded mode (true to use the embedded ldap server, usefull for test/demo, possible values : true or false)
-      # if embedded is false set the following values
+      # This is default LDAP configuration for ApacheDS
 #      context-source-username: "uid=admin,ou=system"
 #      context-source-password: "secret"
-#      context-source-url: "ldap://localhost:10389/c=fr,o=aec,o=corp"
-#      role-mapping: true                    # role mapping mode for ldap user (possible values : true or false)
-      # if role-mapping is true set the following role mapper LDAP values (syntax { "user_ldap_role" : "user_new_added_ldap_role"})
+#      context-source-url: "ldap://localhost:10389"
+#      context-source-base: "c=io,o=gravitee" # the context source base
+      # The 'user-dn-patterns' value is a specific pattern used to build the user's DN, for example "uid={0},ou=people". The key "{0}" must be present and will be substituted with the username.
+#      user-dn-patterns: "uid={0},ou=people"
+      # Search base for user searches. Defaults to "". Only used with user-search-filter.
+#      user-search-base: "o=user accounts,c=io,o=gravitee"
+      # The LDAP filter used to search for users (optional). For example "(uid={0})". The substituted parameter is the user's login name.
+#      user-search-filter: "uid={0}"
+      # The search base for group membership searches. Defaults to "".
+#      group-search-base: "o=gravitee,o=authorization groups,c=io,o=gravitee"
+      # The LDAP filter to search for groups. Defaults to "(uniqueMember={0})". The substituted parameter is the DN of the user.
+#      group-search-filter: "member={0}"
+      # Specifies the attribute name which contains the role name. Default is "cn".
+#      group-role-attribute: "cn"
+      # If role-mapping is equals to true (default to false)
+      #   Use role-mapper to map LDAP role with internal Gravitee role (syntax { "user_ldap_role" : "user_new_added_ldap_role"})
+#      role-mapping: true
 #      role-mapper: {
-#        ROLE_DEVELOPERS: ROLE_USER,
-#        ROLE_MEMBERS: ROLE_USER,
-#        ROLE_OWNERS: ROLE_ADMIN
+#        GRAVITEE-CONSUMERS: API_CONSUMER,
+#        GRAVITEE-PUBLISHERS: API_PUBLISHER,
+#        GRAVITEE-ADMINS: ADMIN,
+#        GRAVITEE-USERS: USER,
 #      }
-#      user-dn-patterns: uid={0},ou=people   # user dn patterns (default 'uid={0},ou=people')
-#      group-search-base: ou=groups          # groupe search base (default 'ou=groups')
-#      context-source-base: c=fr,o=aec,o=corp # the context source base
 
 # SMTP configuration used to send mails
 email:
