fix(elastic): Elasticsearch instances are correctly read from yml configuration
Closes #67

--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -89,8 +89,8 @@ management:
 analytics:
   type: elasticsearch
   elasticsearch:
-    host: ${ds.elastic.host}
-    port: ${ds.elastic.port}
+    hosts:
+      - ${ds.elastic.host}:${ds.elastic.port}
 
 # Authentication and identity sources
 # Users can have following roles (authorities):
