--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<gravitee-plugin-core.version>0.10.0</gravitee-plugin-core.version>
 		<gravitee-plugin-policy.version>0.10.0</gravitee-plugin-policy.version>
 		<gravitee-repository.version>0.10.0</gravitee-repository.version>
-		<gravitee-repository-elasticsearch.version>0.6.0</gravitee-repository-elasticsearch.version>
+		<gravitee-repository-elasticsearch.version>0.7.0-SNAPSHOT</gravitee-repository-elasticsearch.version>
 		<gravitee-repository-mongodb.version>0.9.0</gravitee-repository-mongodb.version>
 		<gravitee-repository-couchbase.version>0.1.0-SNAPSHOT</gravitee-repository-couchbase.version>
 		<gravitee-repository-jdbc.version>0.3.0</gravitee-repository-jdbc.version>
