--- a/gravitee-gateway-services/gravitee-gateway-services-healthcheck/pom.xml
+++ b/gravitee-gateway-services/gravitee-gateway-services-healthcheck/pom.xml
@@ -59,6 +59,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
         <!-- Spring dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -81,9 +87,9 @@
 
         <!-- HttpClient -->
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.1</version>
+            <groupId>org.asynchttpclient</groupId>
+            <artifactId>async-http-client</artifactId>
+            <version>2.0.2</version>
         </dependency>
     </dependencies>
 
