chore: add logs/ plugins/ in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ target/
 .project
 .classpath
 /bin/
+
+gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/logs/*
+gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/plugins/*
