--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
         <gravitee-repository.version>0.10.0</gravitee-repository.version>
         <gravitee-plugin-core.version>0.10.0</gravitee-plugin-core.version>
         <gravitee-plugin-policy.version>0.10.0</gravitee-plugin-policy.version>
-        <gravitee-policy-api.version>0.7.0</gravitee-policy-api.version>
+        <gravitee-policy-api.version>0.8.0-SNAPSHOT</gravitee-policy-api.version>
         <gravitee-policy-core.version>0.1.0</gravitee-policy-core.version>
         <gravitee-gateway-api.version>0.9.0</gravitee-gateway-api.version>
         <gravitee-reporter-api.version>0.7.0-SNAPSHOT</gravitee-reporter-api.version>
