--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,6 @@
 
     <groupId>io.gravitee.repository</groupId>
     <artifactId>gravitee-repository</artifactId>
-    <version>0.11.0</version>
+    <version>0.12.0-SNAPSHOT</version>
     <name>Gravitee IO - API Management - Repository API</name>
 </project>
