--- a/gravitee-gateway-services/gravitee-gateway-services-localregistry/pom.xml
+++ b/gravitee-gateway-services/gravitee-gateway-services-localregistry/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee.gateway.services</groupId>
         <artifactId>gravitee-gateway-services</artifactId>
-        <version>0.12.0</version>
+        <version>0.13.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>gravitee-gateway-services-localregistry</artifactId>
