--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "gravitee-management-webui",
-  "version": "0.12.0",
+  "version": "0.13.0-SNAPSHOT",
   "description": "Gravitee IO - API Management - Admin - Web Console",
   "dependencies": {
     "angular-ui-router": "~0.2.15",
@@ -19,6 +19,7 @@
     "api-console": "~2.0.4",
     "angular-material-icons": "~0.7.0",
     "Read-More-Directive": "git@github.com:andoulla/Read-More-Directive.git",
+    "moment": "momentjs#~2.11.1",
     "dragular": "^4.1.0",
     "angular-schema-form": "~0.8.12",
     "ngclipboard": "~1.1.0",
@@ -31,15 +32,12 @@
     "ng-file-upload": "^12.0.4",
     "js-yaml": "^3.5.5",
     "pie-chart": "n3-charts.pie-chart#^1.0.0",
-    "d3": "3.1.10",
-    "angular-moment": "^0.10.3",
-    "angular-animate": "^1.5.5"
+    "d3": "3.1.10"
   },
   "resolutions": {
     "angular-material": "^1.0.0",
     "jquery": "~2.2.0",
-    "moment": "~2.11.1",
-    "angular": "^1"
+    "angular": "~1.4.9"
   },
   "overrides": {
     "api-console": {
