--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
     <groupId>io.gravitee.management</groupId>
     <artifactId>gravitee-management-webui</artifactId>
-    <version>0.12.1</version>
+    <version>0.13.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Gravitee IO - API Management - Admin - Web Console</name>
 
