--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
     </dependencies>
 
     <properties>
-        <gravitee-common.version>0.8.0</gravitee-common.version>
+        <gravitee-common.version>0.9.0-SNAPSHOT</gravitee-common.version>
         <jackson.version>2.7.3</jackson.version>
     </properties>
 </project>
