--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
         <gravitee-plugin-policy.version>0.10.0</gravitee-plugin-policy.version>
         <gravitee-policy-api.version>0.8.0</gravitee-policy-api.version>
         <gravitee-policy-core.version>0.1.0</gravitee-policy-core.version>
-        <gravitee-gateway-api.version>0.9.0</gravitee-gateway-api.version>
+        <gravitee-gateway-api.version>0.10.0-SNAPSHOT</gravitee-gateway-api.version>
         <gravitee-reporter-api.version>0.7.0</gravitee-reporter-api.version>
         <jackson.version>2.7.3</jackson.version>
         <vertx.version>3.2.1</vertx.version>
