--- a/pom.xml
+++ b/pom.xml
@@ -149,8 +149,8 @@
         <gravitee-definition.version>0.11.0-SNAPSHOT</gravitee-definition.version>
         <gravitee-common.version>0.9.0-SNAPSHOT</gravitee-common.version>
         <gravitee-repository.version>0.11.0</gravitee-repository.version>
-        <gravitee-plugin-core.version>0.10.0</gravitee-plugin-core.version>
-        <gravitee-plugin-policy.version>0.10.0</gravitee-plugin-policy.version>
+        <gravitee-plugin-core.version>0.11.0-SNAPSHOT</gravitee-plugin-core.version>
+        <gravitee-plugin-policy.version>0.11.0-SNAPSHOT</gravitee-plugin-policy.version>
         <gravitee-policy-api.version>0.8.0</gravitee-policy-api.version>
         <gravitee-policy-core.version>0.1.0</gravitee-policy-core.version>
         <gravitee-gateway-api.version>0.10.0-SNAPSHOT</gravitee-gateway-api.version>
