feat: Display user information and allows to upload a picture (#2)

--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
 	<properties>
 		<jedis.version>2.8.0</jedis.version>
 		<jackson.version>2.5.3</jackson.version>
-		<gravitee-repository.version>0.8.0</gravitee-repository.version>
-		<spring-data-redis.version>1.6.2.RELEASE</spring-data-redis.version>
+		<gravitee-repository.version>0.12.0-SNAPSHOT</gravitee-repository.version>
+		<spring-data-redis.version>1.6.4.RELEASE</spring-data-redis.version>
 	</properties>
 
 	<dependencies>
