--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/pom.xml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/pom.xml
@@ -58,12 +58,72 @@
 			<artifactId>gravitee-management-api-standalone-bootstrap</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>io.gravitee.management.idp</groupId>
+			<artifactId>gravitee-management-api-idp-ldap</artifactId>
+			<version>${project.version}</version>
+			<scope>runtime</scope>
+			<type>zip</type>
+		</dependency>
+
+		<dependency>
+			<groupId>io.gravitee.management.idp</groupId>
+			<artifactId>gravitee-management-api-idp-repository</artifactId>
+			<version>${project.version}</version>
+			<scope>runtime</scope>
+			<type>zip</type>
+		</dependency>
+
+		<dependency>
+			<groupId>io.gravitee.management.idp</groupId>
+			<artifactId>gravitee-management-api-idp-memory</artifactId>
+			<version>${project.version}</version>
+			<scope>runtime</scope>
+			<type>zip</type>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<finalName>distribution</finalName>
 
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-plugins</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${basedir}/target/staging</outputDirectory>
+							<artifactItems>
+								<artifactItem>
+									<groupId>io.gravitee.management.idp</groupId>
+									<artifactId>gravitee-management-api-idp-ldap</artifactId>
+									<version>${project.version}</version>
+									<type>zip</type>
+								</artifactItem>
+								<artifactItem>
+									<groupId>io.gravitee.management.idp</groupId>
+									<artifactId>gravitee-management-api-idp-repository</artifactId>
+									<version>${project.version}</version>
+									<type>zip</type>
+								</artifactItem>
+								<artifactItem>
+									<groupId>io.gravitee.management.idp</groupId>
+									<artifactId>gravitee-management-api-idp-memory</artifactId>
+									<version>${project.version}</version>
+									<type>zip</type>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.6</version>
