chore: Upgrade guava dependency

--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-container/pom.xml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-container/pom.xml
@@ -108,6 +108,13 @@
             <artifactId>logback-core</artifactId>
             <version>${logback.version}</version>
         </dependency>
+
+        <!-- Guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
