--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 		<mail.version>1.4.7</mail.version>
 		<freemarker.version>2.3.22</freemarker.version>
 		<java-jwt.version>2.1.0</java-jwt.version>
+		<guava.version>18.0</guava.version>
 	</properties>
 
 	<modules>
