feat(reporter): Moving to safe LMAX disruptor to handle all reportable elements instead of an homemade development

--- a/gravitee-gateway-reporting/pom.xml
+++ b/gravitee-gateway-reporting/pom.xml
@@ -48,6 +48,13 @@
             <artifactId>gravitee-plugin-core</artifactId>
         </dependency>
 
+        <!-- Disruptor -->
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.3.4</version>
+        </dependency>
+
         <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
