--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,11 @@
     <name>Gravitee IO - Management</name>
 
     <properties>
-        <gravitee-definition.version>0.11.0</gravitee-definition.version>
+        <gravitee-definition.version>0.12.0-SNAPSHOT</gravitee-definition.version>
         <gravitee-common.version>0.9.0</gravitee-common.version>
-        <gravitee-plugin-core.version>0.11.0</gravitee-plugin-core.version>
-        <gravitee-plugin-policy.version>0.11.0</gravitee-plugin-policy.version>
+        <gravitee-plugin-core.version>0.12.0-SNAPSHOT</gravitee-plugin-core.version>
+        <gravitee-plugin-policy.version>0.12.0-SNAPSHOT</gravitee-plugin-policy.version>
+        <gravitee-plugin-resource.version>0.12.0-SNAPSHOT</gravitee-plugin-resource.version>
         <gravitee-repository.version>0.12.0</gravitee-repository.version>
         <gravitee-repository-elasticsearch.version>0.7.0</gravitee-repository-elasticsearch.version>
         <gravitee-repository-mongodb.version>0.10.0-SNAPSHOT</gravitee-repository-mongodb.version>
@@ -102,6 +103,11 @@
                 <groupId>io.gravitee.plugin</groupId>
                 <artifactId>gravitee-plugin-policy</artifactId>
                 <version>${gravitee-plugin-policy.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.gravitee.plugin</groupId>
+                <artifactId>gravitee-plugin-resource</artifactId>
+                <version>${gravitee-plugin-resource.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.gravitee.gateway</groupId>
