fix(reporter): Update the configuration file for elasticsearch reporter
Closes gravitee-io/issues#1

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -103,7 +103,7 @@ reporters:
     buffersize: 4096 # Must be a power of 2
 
   # Elasticsearch reporter
-  elastic:
+  elasticsearch:
     enabled: true # Is the reporter enabled or not (default to true)
     hosts:
       - ${ds.elastic.host}:${ds.elastic.port}
