feat(el): Add jsonPath function in expression language
Closes gravitee-io/issues#109

--- a/gravitee-gateway-el/pom.xml
+++ b/gravitee-gateway-el/pom.xml
@@ -38,6 +38,13 @@
             <artifactId>gravitee-gateway-api</artifactId>
         </dependency>
 
+        <!-- Json path -->
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${json-path.version}</version>
+        </dependency>
+
         <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
