--- a/pom.xml
+++ b/pom.xml
@@ -165,5 +165,6 @@
         <snakeyaml.version>1.16</snakeyaml.version>
         <commons-io.version>2.4</commons-io.version>
         <commons-validator.version>1.4.1</commons-validator.version>
+        <json-path.version>2.2.0</json-path.version>
     </properties>
 </project>
