feat(gateway): Add multiple event loop to handle more HTTP calls
Closes gravitee-io/issues#205

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -17,8 +17,7 @@
 #  idleTimeout: 0
 #  tcpKeepAlive: true
 #  compressionSupported: false
-#  pool:
-#    workers: 100
+#  instances: 0
 #  secured: false
 #  ssl:
 #    clientAuth: false
