feat(plan): Implementation of Plans
Closes gravitee-io/issues#257

--- a/gravitee-gateway-handlers/gravitee-gateway-handlers-api/pom.xml
+++ b/gravitee-gateway-handlers/gravitee-gateway-handlers-api/pom.xml
@@ -51,15 +51,15 @@
         </dependency>
 
         <dependency>
-            <groupId>io.gravitee.gateway</groupId>
-            <artifactId>gravitee-gateway-el</artifactId>
+            <groupId>io.gravitee.gateway.http</groupId>
+            <artifactId>gravitee-gateway-http-client-vertx</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>io.gravitee.gateway.http</groupId>
-            <artifactId>gravitee-gateway-http-client-vertx</artifactId>
-            <version>${project.version}</version>
+            <groupId>io.gravitee.repository</groupId>
+            <artifactId>gravitee-repository</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
