--- a/gravitee-gateway-reactor/pom.xml
+++ b/gravitee-gateway-reactor/pom.xml
@@ -40,6 +40,12 @@
         </dependency>
 
         <dependency>
+            <groupId>io.gravitee.gateway</groupId>
+            <artifactId>gravitee-gateway-el</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.gravitee.definition</groupId>
             <artifactId>gravitee-definition-model</artifactId>
         </dependency>
