feat(plugin): Do not start container if some component does not start properly
Closes gravitee-io/issues#262

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -29,8 +29,10 @@
 #      password:
 
 # Plugins repository
-plugins:
-  path: ${gravitee.home}/plugins
+#plugins:
+#  path: ${gravitee.home}/plugins
+# If a plugin is already installed (but with a different version), management node does not start anymore
+#  failOnDuplicate: true
 
 # Management repository is used to store global configuration such as APIs, applications, apikeys, ...
 # This is the default configuration using MongoDB (single server)
