feat(gateway): Manage a request transaction ID from headers
Closes gravitee-io/issues#307

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -150,6 +150,11 @@ services:
   healthcheck:
     threads: 3 # Threads core size used to check endpoint availability
 
+handlers:
+  request:
+    transaction:
+      header: X-Gravitee-Transaction-Id
+
 # Referenced properties
 ds:
   mongodb:
