chore(gateway): Add missing ES cluster configuration property
Closes gravitee-io/issues#374

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -109,6 +109,7 @@ reporters:
     hosts:
       - ${ds.elastic.host}:${ds.elastic.port}
 #    index: gravitee
+#    cluster: elasticsearch
 #    bulk:
 #      actions: 1000           # Number of requests action before flush
 #      flush_interval: 5       # Flush interval in seconds
